<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">inSync</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving inSync.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Choose a Music File</string>
    <string name="insecure_connect">Connect to Another Device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="playdescription">play</string>
    <string name="pausedescription">pause</string>
    <string name="sendFileThroughBluetooth">Send File Through Bluetooth</string>
    <string name="about">Help/About</string>
    <string name="title_activity_about_screen">AboutScreen</string>
    <string name="action_settings">Settings</string>
    
    <!-- Info -->
    <string name="helphowto">To select a music file to play, click on the magnifying glass button. The crosshair button will make your device Bluetooth discoverable if need be, and the "refresh" button will scan for other bluetooth devices. The arrow button on the right can be used to send the selected mp3 file. </string>
    <string name="helpinfo">inSync uses Bluetooth to share and sync music with another Android device. Using this app, you can transfer an MP3 file and synchronously play that file with the other device. </string>
    <string name="aboutbody">The inSync Android application was developed by Stuyvesant High School students Brian Lam and Steven Huang, under the guidance of the extraordinarily devoted Mr. Michael Zamansky. </string>
    <string name="time">00:00</string>
    <string name="aboutCreditsBluetoothChat">This application uses a modified open source BluetoothChat file, which can be found as a sample in the Android SDK. The BluetoothChat template was used to set up a connection between Android devices, and is distributed under the The Android Open Source Project. A license for the open source code can be found at http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="song"/>
    
</resources>
