<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connection" >
            </TextView>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="CLICK ME" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/coverArt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:contentDescription="lol" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:layout_weight="0.00"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/play"
                style="@android:style/MediaButton.Play"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/playdescription" />

            <ImageButton
                android:id="@+id/pause"
                style="@android:style/MediaButton.Pause"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/pausedescription" />

            <SeekBar
                android:id="@+id/mediaprogress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="32dip"
                android:layout_above="@+id/pause"
                android:layout_toLeftOf="@+id/time"
                android:layout_toRightOf="@+id/currTime" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mediaprogress"
                android:layout_alignParentRight="true"
                android:text="@string/time" />

            <TextView
                android:id="@+id/currTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mediaprogress"
                android:layout_alignParentLeft="true"
                android:text="@string/time" />
            <!--
        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="HAHAHA" />
            -->
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="overlay"
        android:src="@drawable/overlay" />   

</FrameLayout>